Reorganizing the exceptions. Simplifying the parse and formatting code.